Fixed uneven column sizes for course divs. Fixed resizing problem with course columns. Added span to header text.

--- a/css/scala-consulting.css
+++ b/css/scala-consulting.css
@@ -62,14 +62,14 @@ body {
 	border: solid;
 	border-color: white;
 	border-width: 6px;
+	border-radius: 6px;
 }
 
 .col-lg-6.left {
-	border-radius: 6px 0px 0px 6px;
+	margin-bottom: 40px;
 }
-
 .col-lg-6.right {
-	border-radius: 0px 6px 6px 0px;
+	margin-top: 40px;
 }
 
 .col-lg-12 {
@@ -79,6 +79,23 @@ body {
 	border-color: white;
 	border-width: 6px;
 	border-radius: 6px;
+}
+
+@media (min-width: 1200px) {
+  .courses {
+	display: table;
+	vertical-align: top;
+  }
+  .course {
+	display: table-cell;
+	float: none;
+  }
+  .col-lg-6.left {
+	border-radius: 6px 0px 0px 6px;
+  }
+  .col-lg-6.right {
+	border-radius: 0px 6px 6px 0px;
+  }
 }
 
 @media (min-width: 900px) {
